added arbitrage types

--- a/hw1.ipynb
+++ b/hw1.ipynb
@@ -32,7 +32,9 @@
     "    V_0 &= 0 \\\\\n",
     "    V_T &= - e^{rt} + e^{r^* t} \\\\\n",
     "        &= \\bigl(e^{rt}\\bigr)^{\\frac{r^*}{r}} - e^{rt} > 0 \\forall r^* > r \\\\\n",
-    "\\end{aligned}$$"
+    "\\end{aligned}$$\n",
+    "\n",
+    "**Type 1:** -1 $B$ +1 $B^*$ for 0 initial cost; payoff guaranteed to be positive at T."
    ]
   },
   {
@@ -59,7 +61,9 @@
     "        &= (110-S_T) + \\max(S_T-110, 0)  \\\\\n",
     "        &= \\max(S_T-110 + (110-S_T), 0+(110-S_T)) \\\\\n",
     "        &= \\max(0, 110-S_T) \\\\\n",
-    "\\end{aligned}$$"
+    "\\end{aligned}$$\n",
+    "\n",
+    "**Type 2:** +100 $Z$ -1 $S$ +1 $C$ for an initial credit of 0.5; payoff is a call option with strike 110 (nonnegative)."
    ]
   },
   {
@@ -83,9 +87,12 @@
     "    \\Theta &= \\begin{bmatrix} 1 & -1 & -1 \\end{bmatrix} \\\\\n",
     "    V_0 &= 100 - 85 - 20 = -5 \\\\\n",
     "    V_T &= S_T - \\min(S_T, 110) - \\max(S_T-110,0) \\\\\n",
-    "    V_T &= S_T - 110 - \\min(S_T - 110, 0) - \\max(S_T-110, 0) \\\\\n",
-    "    V_T &= (S_T - 110) - (\\min(S_T - 110, 0) + \\max(S_T-110, 0)) \\\\\n",
-    "\\end{aligned}$$"
+    "        &= S_T - 110 - \\min(S_T - 110, 0) - \\max(S_T-110, 0) \\\\\n",
+    "        &= \\underbrace{(S_T - 110)}_{\\text{Futures contract with strike 110}} - \\underbrace{(\\min(S_T - 110, 0) + \\max(S_T-110, 0))}_{\\text{Synthetic futures with strike 110 using -Put +Call}} \\\\\n",
+    "        &= 0\n",
+    "\\end{aligned}$$\n",
+    "\n",
+    "**Type 2:** +1 $S$ -1 $G$ -1 $C$ for an initial credit of 5; payoff at T is 0."
    ]
   },
   {
@@ -116,8 +123,10 @@
     "                           S_T-20.0 & \\text{if } 20.0 \\leq S_T < 22.5 \\\\\n",
     "                           25.0-S_T & \\text{if } 22.5 \\leq S_T < 25.0 \\\\\n",
     "                           0 & \\text{if  } 25.0 \\leq S_T < \\infty\n",
-    "           \\end{Bmatrix} \\\\\n",
-    "\\end{aligned}$$"
+    "           \\end{Bmatrix} \\geq 0 \\\\\n",
+    "\\end{aligned}$$\n",
+    "\n",
+    "**Type 2:** +1 $C(20.0)$ -2 $C(22.5)$ +1 $C(25.0)$ for an initial credit of 0.6; payoff at T is a butterfly spread (20.0, 22.5, 25.0) with a nonnegative payoff."
    ]
   },
   {
@@ -146,12 +155,15 @@
     "    \\text{Therefore:} \\\\\n",
     "    \\frac{dX_T}{dS_T}\\biggr|_{100} &= -\\frac{2}{100} = -\\frac{1}{50} \\\\\n",
     "    \\frac{d^2X_T}{dS_T^2} &\\geq 0 \\\\ \\\\\n",
-    "    \\Theta &= \\begin{bmatrix} 50 & -1 & -23 \\end{bmatrix} \\\\\n",
-    "    V_0 &= 50*0.2 + (-1)*(-10) + (-23)*0.9 \\\\\n",
-    "        &= 20 - 20.7 = -0.7 \\\\\n",
-    "    V_T &= 50*(-2\\log\\bigl(\\frac{S_T}{100}\\bigr)) + (-1)*(S_T-100) + (-23)*1 \\\\\n",
-    "        &= 1\n",
-    "\\end{aligned}$$"
+    "    \\Theta &= \\begin{bmatrix} 50 & 1 & 0 \\end{bmatrix} \\\\\n",
+    "    V_0 &= 50*0.2 + 1*(-10) + 0*0.9 \\\\\n",
+    "        &= 10 - 10 = 0 \\\\\n",
+    "    V_T &= 50*(-2\\log\\bigl(\\frac{S_T}{100}\\bigr)) + 1*(S_T-100) \\\\\n",
+    "        &= \\underbrace{-100\\log\\bigl(\\frac{S_T}{100}\\bigr))}_{\\text{Superreplicates short futures at strike 100}} + (S_T-100) \\\\\n",
+    "    V_T &\\geq -(S_T-100) + (S_T-100) = 0 \\\\\n",
+    "\\end{aligned}$$\n",
+    "\n",
+    "**Type 1:** +50 $X$ +1 $Y$ 0 $Z$ for an initial portfolio of 0; payoff at T is superreplicates -$Y_0$ +$Y_0$, and therefore is nonnegative."
    ]
   },
   {
@@ -190,7 +202,7 @@
     "\n",
     "Let us assign names to the above 8 contracts, and to make sure there is no confusion, let us write these contract names in the same ordering as in the above table.\n",
     "\n",
-    "| Win | Biden | Trump |\n",
+    "| | .Biden | .Trump |\n",
     "| --- | --: | --: |\n",
     "| US | 0.83 | 0.17 |\n",
     "| AZ | 0.80 | 0.20 |\n",
@@ -216,25 +228,61 @@
     "\n",
     "Then arbitrage exists.\n",
     "\n",
-    "(a) Find an arbitrage that uses some or all of those 8 listed contracts, but does not use the bank account. In part (a), short-selling (holding negative quantities of an asset) is allowed for any of those 8 listed contracts.\n",
+    "(a) Find an arbitrage that uses some or all of those 8 listed contracts, but does not use the bank account. In part (a), short-selling (holding negative quantities of an asset) is allowed for any of those 8 listed contracts."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a789aa0d-bca7-4998-918e-f2b2d03a3831",
+   "metadata": {},
+   "source": [
+    "$$\\begin{aligned}\n",
+    "    \\mathbb{X}_0 &= \\begin{bmatrix} \\text{US.TRUMP} & \\text{PA.TRUMP} \\end{bmatrix} \\\\\n",
+    "        &= \\begin{bmatrix} 0.17 & 0.16 \\end{bmatrix} \\\\\n",
+    "    \\mathbb{X}_T &= \\begin{bmatrix} \\text{US.TRUMP.WIN} & \\text{PA.TRUMP.WIN} \\\\ \\text{US.TRUMP.LOSS} & \\text{PA.TRUMP.LOSS} \\end{bmatrix} \\\\\n",
+    "        &= \\begin{bmatrix} 1 & 1 \\\\ 0 & 0 \\end{bmatrix} \\\\\n",
+    "    \\Theta &= \\begin{bmatrix} -1 & 1 \\end{bmatrix} \\\\\n",
+    "    V_0 &= -0.17 + 0.16 = -0.01 \\\\\n",
+    "    V_T &=  \\begin{bmatrix} -1 + 1 \\\\ 0 + 0 \\end{bmatrix} \\\\\n",
+    "        &=  \\begin{bmatrix} 0 \\\\ 0 \\end{bmatrix}\\\\\n",
+    "\\end{aligned}$$\n",
     "\n",
+    "**Type 2:** +1 US.TRUMP -1 PA.TRUMP for an initial credit of 0.01; payoff at T is at worst 0."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fa0d2e1b-31a5-4616-adc3-66d2d1bcb659",
+   "metadata": {},
+   "source": [
     "(b) Find an arbitrage that uses some or all of those 8 listed contracts, but does not involve short- selling of any of those 8 listed contracts. In part (b) you are allowed to hold the bank account, in positive or negative quantities.\n",
     "\n",
     "You may use either the type-1 or type-2 definition of arbitrage. Make no further assumptions regarding the probability distribution of the outcomes in the 3 states; your arbitrage must be valid, irrespective of the probability distributions of the outcomes in those 3 states (and irrespective of the joint distributions of those outcomes)."
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "16902b09-8ac6-4d24-92d7-18d40fcc0db9",
+   "cell_type": "markdown",
+   "id": "1513453e-a7b2-448f-a177-d09fb26ff049",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "$$\\begin{aligned}\n",
+    "    \\mathbb{X}_0 &= \\begin{bmatrix} \\text{US.BIDEN} & \\text{PA.TRUMP} & B_0 \\end{bmatrix} \\\\\n",
+    "        &= \\begin{bmatrix} 0.83 & 0.16 & 1 \\end{bmatrix} \\\\\n",
+    "    \\mathbb{X}_T &= \\begin{bmatrix} \\text{US.BIDEN.LOSS} & \\text{PA.TRUMP.WIN} & B_T \\\\ \\text{US.BIDEN.WIN} & \\text{PA.TRUMP.LOSS} & B_T \\end{bmatrix} \\\\\n",
+    "        &= \\begin{bmatrix} 0 & 1 & 1 \\\\ 1 & 0 & 1 \\end{bmatrix} \\\\\n",
+    "    \\Theta &= \\begin{bmatrix} 1 & 1 & -1 \\end{bmatrix} \\\\\n",
+    "    V_0 &= 0.83 + 0.16 - 1 = -0.01 \\\\\n",
+    "    V_T &=  \\begin{bmatrix} 0 + 1 -1 \\\\ 1 + 0 - 1 \\end{bmatrix} \\\\\n",
+    "        &=  \\begin{bmatrix} 0 \\\\ 0 \\end{bmatrix}\\\\\n",
+    "\\end{aligned}$$\n",
+    "\n",
+    "**Type 2:** +1 US.BIDEN +1 PA.TRUMP -1 $B$ for an initial credit of 0.01; payoff at T is at worst 0."
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -248,7 +296,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
