--- a/hw1.ipynb
+++ b/hw1.ipynb
@@ -276,13 +276,15 @@
     "        &=  \\begin{bmatrix} 0 \\\\ 0 \\end{bmatrix}\\\\\n",
     "\\end{aligned}$$\n",
     "\n",
-    "**Type 2:** +1 US.BIDEN +1 PA.TRUMP -1 $B$ for an initial credit of 0.01; payoff at T is at worst 0."
+    "**Type 2:** +1 US.BIDEN +1 PA.TRUMP -1 $B$ for an initial credit of 0.01; payoff at T is at worst 0.\n",
+    "\n",
+    "**Note:** $B_0=B_T=1$ may indicate that the time step between betting is negligible i.e. $\\lim_{T \\to 0} B_T = \\lim_{T \\to 0} e^{rT} = e^{0} = 1$."
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -296,7 +298,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.9.1"
   }
  },
  "nbformat": 4,
